ツイッターカード変えてみるテスト

--- a/metastable3/index.html
+++ b/metastable3/index.html
@@ -8,7 +8,7 @@
   <meta name="twitter:creator" content="pasberth">
   <meta name="twitter:title" content="Metastable3">
   <meta name="twitter:description" content=" ひとつ、ふたつ、たくさん――">
-  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/twittercard.png">
+  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/twittercard_ms3.png">
   <meta name="twitter:app:name:iphone" content="">
   <meta name="twitter:app:name:ipad" content="">
   <meta name="twitter:app:name:googleplay" content="">
