--- a/metastable3/1-04.html
+++ b/metastable3/1-04.html
@@ -20,9 +20,9 @@
 「いや、前に言ってただろ<ruby>四重<rp>《</rp><rt>クアドルプル</rt><rp>》</rp></ruby>ルーミングの話。アレの人材が内定したんだ。正式な認可はまだ先なんだが早めに紹介しておこうと思ってな。ほら、お前ら入れ」
 　津雲に急かされ、まず紀佳が部屋に入り、それに藤白が続いた。六畳くらいの大きさの部屋には机とソファが置かれており、壁に設けられた本棚には何やら難しそうな本が並んでいる。
 　そして少し緊張したような面持ちで部屋の中央に立つ女の子。あの時、屋上に通じる階段の踊り場で出会った、あの少女がそこに居た。
-「あ……あれ？　あなた確か同じクラスの……。それに君……」
-　その女の子、青山希海は少し混乱したような様子で藤白と紀佳を交互に見つめる。無理もない。片方はさっきまで同じ教室で授業を受けていた人物で、もう片方も前日に見た顔だったからだ。
-「おう。そういや青山と古江は学校でも同じクラスだったな。まあでもせっかくだし改めて自己紹介でもするといい、ほらじゃあまず青山から」
+「あ……あれ？　あなた確か……」
+　その女の子、青山希海は少し混乱したような様子で藤白と紀佳を交互に見つめる。無理もない。片方はさっきまで同じ教室で授業を受けていた人物で、もう片方も前日に見た顔だったからなのだろう。
+「おう。そういや青山と古江は面識があったな。まあでもせっかくだし改めて自己紹介でもするといい、ほらじゃあまず青山から」
 「な、なんで私からなんですか」
 「だってこの業界じゃお前が先輩だろ。ほら、ぶつくさ言ってないでさっさと挨拶しろ」
 　津雲に促されて希海はしぶしぶと、それでいて少し落ち着かない様子で自己紹介を始める。
