--- a/metastable3/1-04.html
+++ b/metastable3/1-04.html
@@ -177,9 +177,54 @@
 「うわっ！？」
 　どこからともなく飛んできた棒状のオブジェが藤白の足元に転がされ、それを踏んづけてしまった藤白はあえなくその場にすっ転んでしまう。
 「ち、ちくしょう……って、ぐえっ！」
-　立ち上がろうとした藤白の背中に、ダメ押しとばかりに楕円状のオブジェが炸裂する。希海は波状攻撃を受け地面に這いつくばっていた藤白のそばへと優雅に歩いて行き、
+　立ち上がろうとした藤白の背中に、ダメ押しとばかりに楕円状のオブジェが炸裂する。波状攻撃を受け地面に這いつくばっていた藤白。希海はそんな藤白の元へと優雅に歩いて行き、その腕章にちょこんと指先で触れると
 「はい、私の勝ち」
-　その腕章にちょこんと指先で触れるのだった。
+　そう言ってにっこりと微笑むのだった。
+
+　その後、何度も挑戦してみたが、藤白が希海に勝てることはついになかった。
+　不意打ちでスタートダッシュを決めるもあえなくすっ転ばされるし、足元に注意して走ったら今度は上からオブジェが落ちてくる。左右に跳んで避けようとするも横から別のものが飛来するし、距離を取って後ろに退けば正確無比な遠投に追い打ちされる。
+「も……もう無理。まいった」
+　そして藤白は音を上げてその場に倒れこんだ。
+「よろしい」
+　希海はその様子を見て満足したかのように、うん、とうなずいてみせる。あ、この人結構サドっ毛あるな、と藤白は思った。
+　真っ白な地面に横たわり、ただ無心に上空を眺める。そこにはグリッドの引かれた真っ白な天井がどこまでも続いていて、しばし凝視しているとどちらが地面でどちらが天井なのかがだんだん分からなくなってくる。
+「先輩は……いつもこんなことやってんのか」
+「まあね。中には素直に出てきてくれる患者もいるけど、十中八九何かしらの争いになるかな。じゃあ次は……」
+　そして希海は紀佳の方に向き直り
+「古江さんの番ね」
+　そう静かに告げるのだった。
+「えっ？　紀佳もやるのか……？」
+「うん、そりゃね。ていうかそのために今日はこんな場所まで来てもらったわけだし」
+「いや、でも紀佳は……」
+　紀佳は運動が大の苦手である。
+　小さい頃から体育の成績はいつもビリだったし、一緒に登校するときだって、どんなに遅刻しそうでも紀佳の足の遅さを鑑みて藤白は絶対に走ることをしなかった。ひとたび自分が走り出すと、次振り返ったときにはもう半径数十メートルの範囲に紀佳の姿はなく、息を切らしながら遥か後ろを走る米粒のようなサイズの少女を確認することができる。そんなレベルの運動音痴だ。
+　だから藤白には紀佳にこんな荒事ができるとは思えなかったのだが、事情を知らない希海はまた話が別である。同じクラスとはいえ、まだ体育の授業も始まっていない新学期二日目でにしてその運動音痴具合を認知するのは無理がある。ここは自分が少し説明しておいたほうがいいだろう。そう思ってその場から立ち上がった藤白だったが、
+「私は……もう準備できてるよ」
+　当の紀佳は希海をまっすぐに見据え、そう静かに言い放つのだった。そのセリフに『へぇ』と関心した表情を浮かべる希海。
+「あ、じゃあ能力に関してはちょっと伏せとこっか。実戦だと互いに何も分からない状態からその……戦いが始まるわけじゃない？　せっかくだしいきなり模擬戦やってみようよ。まあ古江さんには私の能力もう見せちゃったけど、それはハンデってことで」
+「うん、私はそれでいい」
+「じゃあルールは藤白くんとやったときと一緒ってことで、はいスタート」
+「お、おい紀佳――」
+　お前、大丈夫なのか。そう割って入ろうとした藤白の言葉が最後まで出ようとした次の瞬間。
+　紀佳の姿が消えた。
+　いや、正確に言えば消えてはいない。紀佳は狩りをする猫のように一瞬でその場から跳躍したのだ。その事実を藤白が把握したときには紀佳はもう希海の目の前に着地をしていた。
+　――！！
+　不意を突かれる形になった希海は、少し遅れて紀佳の背後にあったオブジェを投げつけた。あまりに突然のことで手加減ができなかったのだろう。そのスピードは遊び半分でやっていた藤白のときと比較にならない。
+　だが紀佳は背後に目でも付いているかのように振り返らず、横に飛んでそれを避ける。その跳躍に反射神経が追いつかなかったのか、さっきまで紀佳のいた空間に向かって放たれたオブジェは希海自身に刃をなす一撃になってしまう。
+「しまっ――！」
+　両腕で体と顔面を守りながらオブジェに跳ね飛ばされる希海。紀佳はそんな相手の隙を見逃しはしない。さらに一跳びをして距離を詰めると、その右手を伸ばして希海の腕章を鷲掴みにしようと――
+　だが伸ばした手は目的のものに触れる寸前に引っ込められた。両脇から飛んできたオブジェを避ける形で紀佳は後ろに跳躍すると、そのまま跳ねまわるボールのように天井や床を蹴って希海から距離を取る。
+　中空でオブジェ同士が衝突する乾いた音が響き、それを合図に再び前へ跳び出す紀佳。だが希海はその動きを予想していたかのように、宙をゆく紀佳の軌道上にひときわ大きな、人の胴体ほどもあるオブジェを投げてよこした。一方の紀佳はそのオブジェを蹴ってふわりと軌道を上空に移すが、
+　それが悪手だった。
+　前後左右とおまけで斜めから。五つの異なるオブジェが速度も軌道もばらばらに襲いかかる。中空で身動きが取れなくなった紀佳はそれを避けられず、体をすくめて防御することしかできない。
+　そして次の瞬間、ばきり、という嫌な音を藤白は確かに聞いた。
+　「お、おい紀佳！」
+　叩き落とされた蝿のように、頭を下にしてその場に力なく落下する紀佳。右手一本で着地をして頭を守ろうとするが、上手くいかずにその場に倒れこんでしまう。
+　希海はそんな紀佳の元へ一目散に駆けていく。そしてその腕章に手を掛けようとした次の瞬間、
+　うずくまっていた紀佳の足が動いた。バネのように伸ばされた右足が<ruby>鳩尾<rp>《</rp><rt>みぞおち</rt><rp>》</rp></ruby>を直撃し、希海は数歩分後ろに跳ね飛ばされて仰向けに倒れこんでしまう。紀佳は体を反らして起き上がると、そのまま希海に近づき腕章に手をかけようとして、
+　止まった。
+　仰向けに倒れたままの状態から伸ばした希海の右手。その手は紀佳よりも一瞬早く、相手の腕章に触れていた。
+
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
