--- a/metastable3/1-04.html
+++ b/metastable3/1-04.html
@@ -17,7 +17,7 @@
 　その一角にある小さな休憩室の扉を、津雲はノックもせずに開いた。
 「おう、青山いるか？」
 「あれ？　津雲さん、どうしたんですか」
-「いや、前に言ってただろ<ruby>四重<rp>《</rp><rt>クアドルプル</rt><rp>》</rp></ruby>ルーミングの話。アレの人材が内定したんだ。正式な認可はまだ先なんだが早めに紹介しておこうと思ってな。ほら、お前ら入れ」
+「いや、前に言ってただろ<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミングの話。アレの人材が内定したんだ。正式な認可はまだ先なんだが早めに紹介しておこうと思ってな。ほら、お前ら入れ」
 　津雲に急かされ、まず紀佳が部屋に入り、それに藤白が続いた。六畳くらいの大きさの部屋には机とソファが置かれており、壁に設けられた本棚には何やら難しそうな本が並んでいる。
 　そして少し緊張したような面持ちで部屋の中央に立つ女の子。あの時、屋上に通じる階段の踊り場で出会った、あの少女がそこに居た。
 「あ……あれ？　あなた確か……」
@@ -36,7 +36,7 @@
 「ルーミング？」と紀佳。
 「ああ、そういや言ってなかったな。患者の精神に入ることを俺たちは『ルーミング』って言ってるんだ。まあ業界用語だな」
 「いきなり本番は流石にちょっと……」と藤白。
-「大丈夫だ。本番じゃない。ここにはルーミングの訓練施設があって、今回はそれを使った予行演習みたいなことをするだけだ。それに、お前らの<ruby>能力<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>も早めに知っておきたいしな」
+「大丈夫だ。本番じゃない。ここにはルーミングの訓練施設があって、今回はそれを使った予行演習みたいなことをするだけだ。それに、お前らの<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>も早めに知っておきたいしな」
 　そして話はトントン拍子で進んだ。
 　三人は二、三の説明を受けながら廊下を歩き、そして病院内の一番奥まった場所にある部屋へと案内された。小さく重い扉を開くと、そこには窓一つ無い開けた部屋と、そこに置かれた三つのベッド。壁際にはロッカーを数段重ねにしたような計器類が所狭しと並べられており、そこからベッドに向かって何本ものケーブルが伸びていた。
 「俺は担当者を呼んでくるからこっから先は青山が説明してくれ。ルーミング予定時刻は……そうだな今から30分後くらいでいいだろ。じゃあ後は頼んだぞ」
@@ -98,7 +98,7 @@
 　そして希海は自らの横に置いてあった赤い楕円形のオブジェをちらりと見た。すると次の瞬間、そのオブジェがひとりでに宙に浮き上がり、希海の周囲をくるくると回り始める。
 「こんな風に手に触れず物を動かせたり」
 「……なっ！？」
-「これが<ruby>能力<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>って言われるもので、特定精神医療従事者なら誰でも持ってる能力……ていうかこれを持ってる人が特定精神医療従事者に選ばれるんだけどね」
+「これが<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>って言われるもので、特定精神医療従事者なら誰でも持ってる能力……ていうかこれを持ってる人が特定精神医療従事者に選ばれるんだけどね」
 　希海が空き缶を後ろに投げるような動作をすると、宙に浮いていたオブジェがそれに呼応するように向こう側へ飛んでいく。
 「とにかく、二人とも適正アリって判断された以上は何かしらの能力があるかと思うんだけど……どうかな」
 　藤白は困ったように紀佳の方を見たが、一方の紀佳は何かを考え込むかのように俯いたまま視線を上げようとしない。
@@ -139,7 +139,7 @@
 「あーあーあー、テスト。テスト……か？」
 「す、すごい。合ってる！　合ってるよ！」
 　答え合わせが上手く行ったことを確認した藤白は、少しだけ得意な気分になる。
-「と、まあ、こんな感じだな。俺の、その能力ってヤツは。一度触れた人と言葉を交わさずにメッセージをやりとりできる……らしい」
+「と、まあ、こんな感じだな。俺の、その<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>ってヤツは。一度触れた人と言葉を交わさずにメッセージをやりとりできる……らしい」
 「へぇ、カズくんそんなことできるんだ。でもさ、考えたことがそのまま伝わるなら、教えたくないことまで伝わっちゃうんじゃ」
 　それまで黙っていた紀佳が割って入る。
 「えっ！？　ちょ、ちょっとやめてよ藤白くん。わ、私にだって知られたくないことくらい」
@@ -161,7 +161,7 @@
 「そう？　じゃあやってみよっか。ルールは簡単。藤白くんと私が左腕に着けてるその腕章。それに触れた方が勝ち。ただしハンデとして……」
 　希海はそう言うと、ジャリと音を立てて足元の真っ白な大地を靴でこする。
 「私はここから後ろに下がらない。じゃ、はい。今からスタート」
-　そのあまりにのんきな様子に藤白は戸惑いを覚える。いくらなんでもハンデが大きすぎないだろうか。実践と言ってもルールを聞けばいわばケンカみたいなもので、今も昔もケンカに一番有利な<ruby>要因<rp>《</rp><rt>ファクター</rt><rp>》</rp></ruby>は体格だ。見たところ希海の身長は１６０センチと少し。一方の藤白は180代の前半である。体重や筋肉量だって大きな差があるだろう。能力以前にそんな明らかな差があるのに、まだこれ以上ハンデを着けようという希海の気がしれなかった。
+　そのあまりにのんきな様子に藤白は戸惑いを覚える。いくらなんでもハンデが大きすぎないだろうか。実践と言ってもルールを聞けばいわばケンカみたいなもので、今も昔もケンカに一番有利な<ruby>要因<rp>《</rp><rt>ファクター</rt><rp>》</rp></ruby>は体格だ。見たところ希海の身長は１６０センチと少し。一方の藤白は１８０代の前半である。体重や筋肉量だって大きな差があるだろう。能力以前にそんな明らかな差があるのに、まだこれ以上ハンデを着けようという希海の気がしれなかった。
 「どうしたの？　もう始まってるよ？」
 「いや、さすがにちょっとそれはハンデでかすぎないか……？」
 　そうこぼした藤白に対して希海は意地悪そうな笑みを浮かべると、
@@ -221,10 +221,11 @@
 　「お、おい紀佳！」
 　叩き落とされた蝿のように、頭を下にしてその場に力なく落下する紀佳。右手一本で着地をして頭を守ろうとするが、上手くいかずにその場に倒れこんでしまう。
 　希海はそんな紀佳の元へ一目散に駆けていく。そしてその腕章に手を掛けようとした次の瞬間、
-　うずくまっていた紀佳の足が動いた。バネのように伸ばされた右足が<ruby>鳩尾<rp>《</rp><rt>みぞおち</rt><rp>》</rp></ruby>を直撃し、希海は数歩分後ろに跳ね飛ばされて仰向けに倒れこんでしまう。紀佳は体を反らして起き上がると、そのまま希海に近づき腕章に手をかけようとして、
+　うずくまっていた紀佳の足が動いた。バネのように伸ばされた右足が<ruby>鳩尾<rp>《</rp><rt>みぞおち</rt><rp>》</rp></ruby>を直撃し、希海は数歩分後ろに跳ね飛ばされて仰向けに倒れこんでしまう。紀佳は体を反らして起き上がると、そのまま倒れこんでいた希海に近づき馬乗りになってその腕章に手をかけようとして、
 　止まった。
-　仰向けに倒れたままの状態から伸ばした希海の右手。その手は紀佳よりも一瞬早く、相手の腕章に触れていた。
-
+　仰向けに倒れたままの状態から伸ばした希海の右手。
+　その手は紀佳よりも一瞬早く、相手の腕章に触れていた。
+　
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
