簡体字フォント対応

--- a/metastable3/1-05.html
+++ b/metastable3/1-05.html
@@ -34,7 +34,7 @@
 　そう言って藤白に差し出されたのは、一枚のＡ４サイズのプリントだった。そこには何やら難しいお役所言葉が細かく書かれている。
 「えっとこれは……？」
 「ああ、お前が見てもよく分からんだろうから雰囲気だけを感じ取ってもらえたらいい。それは上からのお達しの書類だ。注目してほしいのはそのタイトル。学生精神医療従事者における四重極ルーミングなんちゃら……って書かれてるだろ？」
-　プリントの上部に目をやると確かに『学生精神医疗从事者における四重极ルーミングの试验的运用に关して』とゴシック体で書かれている。
+　プリントの上部に目をやると確かに『<span class="simplified">学生精神医疗从事者</span>における<span class="simplified">四重极</span>ルーミングの<span class="simplified">试验的运用</span>に<span class="simplified">关</span>して』とゴシック体で書かれている。
 「この四重極ルーミングっていうのは？」
 「おう、まさにそれだ。つまり従来のルーミングは<ruby>双極<rp>《</rp><rt>ダイポール</rt><rp>》</rp></ruby>型……つまり一人の患者と一人の作業者を繋いで治療する形式で行われていたわけだ。何でかっていうと、これが一番安定してるから。つまり患者と作業者合わせて二人になる場合が一番簡単にできるんだよ。だが患者と作業者の数が合わせて三人以上になると途端に不安定になってしまって上手いことルーミングができないことが実験的にも理論的にも示されていたわけだ」
 　話が途端に難しくなってしまって藤白は目を白黒させる。津雲はそんな藤白に少し呆れたようにため息をつくと
