--- a/metastable3/1-05.html
+++ b/metastable3/1-05.html
@@ -36,7 +36,7 @@
 「ああ、お前が見てもよく分からんだろうから雰囲気だけを感じ取ってもらえたらいい。それは上からのお達しの書類だ。注目してほしいのはそのタイトル。学生精神医療従事者における四重極ルーミングなんちゃら……って書かれてるだろ？」
 　プリントの上部に目をやると確かに『<span class="simplified">学生精神医疗从事者</span>における<span class="simplified">四重极</span>ルーミングの<span class="simplified">试验的运用</span>に<span class="simplified">关</span>して』とゴシック体で書かれている。
 「この四重極ルーミングっていうのは？」
-「おう、まさにそれだ。つまり従来のルーミングは<ruby>双極<rp>《</rp><rt>ダイポール</rt><rp>》</rp></ruby>型……つまり一人の患者と一人の作業者を繋いで治療する形式で行われていたわけだ。何でかっていうと、これが一番安定してるから。つまり患者と作業者合わせて二人になる場合が一番簡単にできるんだよ。だが患者と作業者の数が合わせて三人以上になると途端に不安定になってしまって上手いことルーミングができないことが実験的にも理論的にも示されていたわけだ」
+「おう、まさにそれだ。従来のルーミングは<ruby>双極<rp>《</rp><rt>ダイポール</rt><rp>》</rp></ruby>型……つまり一人の患者と一人の作業者を繋いで治療する形式で行われていたわけだ。何でかっていうと、これが一番安定してるから。つまり患者と作業者合わせて二人になる場合が一番簡単にできるんだよ。だが患者と作業者の数が合わせて三人以上になると途端に不安定になってしまって上手いこと精神を接続できないことが実験的にも理論的にも示されていたわけだ」
 　話が途端に難しくなってしまって藤白は目を白黒させる。津雲はそんな藤白に少し呆れたようにため息をつくと
 「おいおいこれくらいはさっと理解して欲しいぞ？　つまりだなあ、今までは患者一人に対して作業者一人じゃないと上手くいかなかったんだよ。ところが最近、実験的にその例外が発見された。それが<ruby>四重極<rp>《</rp><rt>クアドロポール</rt><rp>》</rp></ruby>ルーミング。つまり患者と作業者が合わせて四人の場合だと、不思議とこれが安定するらしい。いや厳密には安定じゃなくて<ruby>準安定数４<rp>《</rp><rt>メタステーブル・フォー</rt><rp>》</rp></ruby>なんて名前で呼ぶらしいが、俺も専門家じゃないから詳しくは知らん」
 「えっと、つまり……？」
@@ -55,14 +55,16 @@
 　むせた。
 「な、何言ってるんですか！　しませんよそんなこと！」
 「お、そうか？　でもお前ら若いしな。ルーミングは三人で行うとはいえ、どんな過ちが起こるか分からんからな」
-　仮に自分と希海がそういう関係になったとしても、患者や紀佳のいる場所でそんなことするわけがない。というか所構わずそんな行為をしでかす人間だと認識されてるかと思うとかなり心外だった。
+　仮に、もしも万が一、何か天変地異でも起こって自分と希海がそういう関係になったとしても、患者や紀佳のいる場所でそんなことするわけがない。というか所構わずそんな行為をしでかす人間だと認識されてるかと思うとかなり心外だった。
 「津雲さんは俺をどういう人間だと思ってるんですか……」
 「ああ、すまんすまん。まあでもこれだけはちゃんと言っておかなきゃいけなくてな。何故かと言うと精神空間内でそういう行為に及ぶのはかなり危険だからだ」
 「……なんで危険なんですか？」
 「ルーミングやオルゴンといったものは性欲と深い関係にあって精神空間内でオルガスムスを感じると没入の深度が大幅に上がるからだ。ていうか俺がお前をスカウトしたのも似たような理由なんだなこれが。知ってるか？　恋をすると血中バイオン濃度や<ruby>虚想受容性<rp>《</rp><rt>ネガティブケイパビリティ</rt><rp>》</rp></ruby>が通常人よりも大幅に高まるなんて研究結果がある。つまりあんなストーカーまがいのことをしでかすほどに青山に惚れているお前なら、ひょっとして精神医療従事者の適正があるんじゃないかと踏んだわけだ」
 　悲しいかな、その読みは大当たりだったということだ。だが藤白はまだ納得がいかない。自分は別に、そういう下心で希海の後をつけていた訳ではなく単にあの日の……あの涙の<ruby>理由<rp>《</rp><rt>わ　け</rt><rp>》</rp></ruby>が知りたかっただけなのだ。
 　だが現実に津雲の読みが的中して自分に精神医療従事者の適性がアリだと判断されてしまった事実は重い。自覚がないだけで、自分はやっぱりそういう理由から希海のことが気にかかってしまっているのだろうか。
-　そんなことを考えているうちに津雲との面談は早々に終了してしまう。藤白は適当に挨拶をして執務室を出ると、人民帽を目深にかぶり直してそのまま長い長い病院の廊下を歩き始めた。今日はじめて来た場所だったが、検査にルーミングにと、もう何度も往復した道なので既に地図は頭のなかに入っている。トイレの前を横切り、掲示板の貼られている角を右に曲がって突き当りをまっすぐ左へ歩けば、そこは一番最初に入ってきた関係者用の出入口だ。
+「まあ、そんなわけで今日はこの辺にしておくか。気をつけて帰るんだぞ」
+「あ、はい……。それじゃあまた」
+　藤白は適当に挨拶をして執務室を出ると、人民帽を目深にかぶり直してそのまま長い長い病院の廊下を歩き始めた。今日はじめて来た場所だったが、検査にルーミングにと、もう何度も往復した道なので既に地図は頭のなかに入っている。トイレの前を横切り、掲示板の貼られている角を右に曲がって突き当りをまっすぐ左へ歩けば、そこは一番最初に入ってきた関係者用の出入口だ。
 　少しだけ重い鉄製の扉に手を掛け、すっかり暗くなってしまった屋外へ出た次の瞬間。
 「あ、ふ、藤白くん」
 　その場に待ち構えていた人物から声がかかった。振り返るとそこにいたのは校則違反間違いなしの明るいくせっ毛をした少女。
